--- a/frontend/Bitki.Blazor/Components/Pages/AktiviteEtkiList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/AktiviteEtkiList.razor
@@ -34,8 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="AktiviteEtkiViewModel" Item="selectedItem"
-                    Title="@($"Aktivite Etki - {selectedItem.Name}")" Fields="inspectorFields" OnSave="HandleSave"
-                    OnDelete="HandleDelete" />
+                    Title="@($"Aktivite Etki - {selectedItem.Name}")" Fields="inspectorFields" ViewOnly="true" />
             </InspectorContent>
         </RecordExplorer>
 
