--- a/frontend/Bitki.Blazor/Components/Pages/EtnobitkilitList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/EtnobitkilitList.razor
@@ -34,8 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="EtnobitkilitViewModel" Item="selectedItem"
-                    Title="@($"Etnobitkilit - {selectedItem.TurkishName}")" Fields="inspectorFields" OnSave="HandleSave"
-                    OnDelete="HandleDelete" />
+                    Title="@($"Etnobitkilit - {selectedItem.TurkishName}")" Fields="inspectorFields" ViewOnly="true" />
             </InspectorContent>
         </RecordExplorer>
 
