--- a/frontend/Bitki.Blazor/Components/Pages/EtnolokaliteList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/EtnolokaliteList.razor
@@ -34,8 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="EtnolokaliteViewModel" Item="selectedItem"
-                    Title="@($"Etnolokalite - {selectedItem.LocalName}")" Fields="inspectorFields" OnSave="HandleSave"
-                    OnDelete="HandleDelete" />
+                    Title="@($"Etnolokalite - {selectedItem.LocalName}")" Fields="inspectorFields" ViewOnly="true" />
             </InspectorContent>
         </RecordExplorer>
 
