--- a/frontend/Bitki.Blazor/Components/Pages/FamilyaList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/FamilyaList.razor
@@ -34,8 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="FamilyaViewModel" Item="selectedItem"
-                    Title="@($"Familya Detayları - {selectedItem.Name}")" Fields="inspectorFields" OnSave="HandleSave"
-                    OnDelete="HandleDelete" />
+                    Title="@($"Familya Detayları - {selectedItem.Name}")" Fields="inspectorFields" ViewOnly="true" />
             </InspectorContent>
         </RecordExplorer>
 
