--- a/frontend/Bitki.Blazor/Components/Pages/LiteraturHatalariList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/LiteraturHatalariList.razor
@@ -34,8 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="LiteraturHatalariViewModel" Item="selectedItem"
-                    Title="@($"Hata - {selectedItem.ErrorName}")" Fields="inspectorFields" OnSave="HandleSave"
-                    OnDelete="HandleDelete" />
+                    Title="@($"Hata - {selectedItem.ErrorName}")" Fields="inspectorFields" ViewOnly="true" />
             </InspectorContent>
         </RecordExplorer>
 
