--- a/frontend/Bitki.Blazor/Components/Pages/LiteraturKonularList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/LiteraturKonularList.razor
@@ -34,8 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="LiteraturKonularViewModel" Item="selectedItem"
-                    Title="@($"Konu - {selectedItem.Topic}")" Fields="inspectorFields" OnSave="HandleSave"
-                    OnDelete="HandleDelete" />
+                    Title="@($"Konu - {selectedItem.Topic}")" Fields="inspectorFields" ViewOnly="true" />
             </InspectorContent>
         </RecordExplorer>
 
