--- a/frontend/Bitki.Blazor/Components/Pages/EtnolokaliteList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/EtnolokaliteList.razor
@@ -33,8 +33,8 @@
             ShowSearch="true" IsLoading="isLoading" TotalCount="totalCount" FilteredCount="filteredCount"
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
-                <RecordInspector TItem="EtnolokaliteViewModel" Item="selectedItem"
-                    Title="@($"Etnolokalite - {selectedItem.LocalName}")" Fields="inspectorFields" ViewOnly="true" />
+                <RecordInspector TItem="EtnolokaliteViewModel" Item="selectedItem" Title="@(selectedItem.LocalName)"
+                    Fields="inspectorFields" ViewOnly="false" OnSave="HandleSave" OnDelete="HandleDelete" />
             </InspectorContent>
         </RecordExplorer>
 
