--- a/frontend/Bitki.Blazor/Components/Pages/LiteraturHatalariList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/LiteraturHatalariList.razor
@@ -34,7 +34,8 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="LiteraturHatalariViewModel" Item="selectedItem"
-                    Title="@($"Hata - {selectedItem.ErrorName}")" Fields="inspectorFields" ViewOnly="true" />
+                    Title="@($"Literatür Hatası - {selectedItem.ErrorName}")" Fields="inspectorFields" ViewOnly="false"
+                    OnSave="HandleSave" OnDelete="HandleDelete" />
             </InspectorContent>
         </RecordExplorer>
 
