--- a/frontend/Bitki.Blazor/Components/Pages/UcucuYagBilesikList.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/UcucuYagBilesikList.razor
@@ -34,7 +34,7 @@
             OnSearchChanged="HandleSearchChanged" OnSortChanged="HandleSortChanged">
             <InspectorContent Context="selectedItem">
                 <RecordInspector TItem="UcucuYagBilesikViewModel" Item="selectedItem" Title="Uçucu Yağ-Bileşik"
-                    Fields="inspectorFields" ViewOnly="true" />
+                    Fields="inspectorFields" ViewOnly="false" OnSave="HandleSave" OnDelete="HandleDelete" />
             </InspectorContent>
         </RecordExplorer>
 
